# can4linux

./: CMakeLists.txt  README.md
doc/: TODO
examples/: ring_buffer_ex.c
inc/: error_codes.h  event_logger.h  ring_buffer.h  threads_wrapper.h  utils.h  visibility.h
scripts/: build.sh  build_run.sh  clean.sh  config.sh  run.sh  run_.all.sh
src/: event_logger.c  ring_buffer.c  threads_wrapper.c
